[metadata]
name = garble
version = 0.0.3
url = https://github.com/thorwhalen/garble
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Make bags of words and do stuff with them for make benefit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = garble

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn
	wordcloud
	py2store

